Commit 2: Preprocessed and tokenized dataset for DistilBERT fine-tuning

--- a/notebooks/1_eda.ipynb
+++ b/notebooks/1_eda.ipynb
@@ -547,7 +547,19 @@
    "cell_type": "markdown",
    "id": "5007f0ac",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Dataset:** 44,898 articles across `title`, `text`, `subject`, `date`, `label`; clean with no major missing values.\n",
+    "\n",
+    "**Class Balance:** Slight skew — ~52% Fake vs ~48% Real.\n",
+    "\n",
+    "**Text Length:** Fake articles are longer and more variable (avg ≈ 423 words) than real ones (≈ 386 words).\n",
+    "\n",
+    "**Titles:** Fake titles are longer and more sensational (≈15 words) vs real (≈10 words).\n",
+    "\n",
+    "**Subjects:** Some topics are label-biased (e.g., politics has more fake entries).\n",
+    "\n",
+    "**Overall Insight:** Fake news tends to use longer, flashier language; data is clean and ready for modeling with minor imbalance handling."
+   ]
   },
   {
    "cell_type": "markdown",
